--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "json-server": "^0.14.2",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
+    "react-alert": "^5.5.0",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.5",
     "react-router-bootstrap": "^0.25.0",
