--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.5",
+    "react-native": "^0.59.9",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
